--- a/output/team.html
+++ b/output/team.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 mb-3 mt-4 p-5 bg-primary text-white rounded team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
